--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -51,7 +51,7 @@ li.license{
   padding: 24px 12px ;
 }
 .contact{
-  background-image: url('http://220.128.133.15/s1100218/images/contactBg.jpg');
+  background-image: url('https://github.com/a120220ms25/pic/blob/master/pawel-czerwinski-YWIOwHvRBvU-unsplash.jpg?raw=true');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
