--- a/css/all.css
+++ b/css/all.css
@@ -15030,7 +15030,7 @@ li.license {
 }
 
 .contact {
-  background-image: url("http://220.128.133.15/s1100218/images/contactBg.jpg");
+  background-image: url("https://github.com/a120220ms25/a120220ms25.github.io/blob/master/images/contactBg.jpg?raw=true");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
