--- a/css/all.css
+++ b/css/all.css
@@ -15127,7 +15127,7 @@ li.license {
 }
 
 .img04 {
-  background-image: url("../images/color_editor.jpg");
+  background-image: url("../images/api_weather.jpg");
 }
 
 .img05 {
