--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -153,7 +153,7 @@ li.license{
 }
 // coloreditor
 .img04{
-  background-image: url('../images/color_editor.jpg');
+  background-image: url('../images/api_weather.jpg');
 }
 // react
 .img05{
@@ -163,5 +163,6 @@ li.license{
 .img06{
   background-image: url('../images/cv_backend.jpg');
 }
+
 
 
