--- a/scss/_util.scss
+++ b/scss/_util.scss
@@ -73,7 +73,7 @@ a{
 //project item效果
 .clear{
   // transform: scale(1);
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  box-shadow: rgba(0, 0, 0, 0.74) 0px 10px 15px -3px, rgba(0, 0, 0, 0.726) 0px 4px 6px -2px;
 }
 
 .blur{
@@ -99,9 +99,9 @@ a{
   background-color:#fff;
   padding: 0px 2px;
   margin-right: 3px;
-  font-size: 10px;
+  font-size: 12px;
   border-radius: 3px;
-  color: gray;
+  color: black;
 }
 
 
