--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -13,8 +13,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     border:20px solid white;
-    width: 320px;
-    height: 320px;
+    width: 280px;
+    height: 280px;
     border-radius: 50%;
     box-shadow: rgba(0, 0, 0, 0.507) 0px 12px 28px 0px, rgba(0, 0, 0, 0.397) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
   }
@@ -77,7 +77,7 @@ li.license{
 }
 
 .main.about{
-  background-image: url('../images/bg08.jpg');
+  background-image: url('../images/bg (2).jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
