--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -64,7 +64,7 @@
 // main
 .main.about{
   @include pad{
-    background-image: url('../images/bg11.jpg') !important;
+    // background-image: url('../images/bg11.jpg') !important;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
